trustfall_core/test_data/tests/parse_errors/transform_count_before_fold_on_edge.parse-error.ron
Err(UnsupportedDirectivePosition("@fold", "this directive cannot appear after a @transform directive, did you mean to apply the @fold first?", Pos(
  line: 8,
  column: 57,
)))
